// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageLayout /> should render a fullscreen layout 1`] = `
<PageLayout
  layoutType="fullscreen"
>
  <div
    className="base fullscreen page-base"
  >
    <Region
      regionType="top-left"
    >
      <div
        className="top-left-outer"
      >
        <div
          className="top-left-inner"
        >
          <div>
            1
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="top-right"
    >
      <div
        className="top-right-outer"
      >
        <div
          className="top-right-inner"
        >
          <div>
            2
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content-outer"
      >
        <div
          className="content-inner"
        >
          <div>
            a
          </div>
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;

exports[`<PageLayout /> should render a profile layout 1`] = `
<PageLayout
  layoutType="profile"
>
  <div
    className="base profile page-base"
  >
    <Region
      regionType="top-left"
    >
      <div
        className="top-left-outer"
      >
        <div
          className="top-left-inner"
        >
          <div>
            1
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="top-right"
    >
      <div
        className="top-right-outer"
      >
        <div
          className="top-right-inner"
        >
          <div>
            2
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="header"
    >
      <div
        className="header-outer"
      >
        <div
          className="header-inner"
        >
          <div>
            a
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content-outer"
      >
        <div
          className="content-inner"
        >
          <div>
            b
          </div>
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;

exports[`<PageLayout /> should render a simple layout 1`] = `
<PageLayout
  layoutType="profile"
>
  <div
    className="base profile page-base"
  >
    <Region
      regionType="top-left"
    >
      <div
        className="top-left-outer"
      >
        <div
          className="top-left-inner"
        >
          <div>
            1
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="top-right"
    >
      <div
        className="top-right-outer"
      >
        <div
          className="top-right-inner"
        >
          <div>
            2
          </div>
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content-outer"
      >
        <div
          className="content-inner"
        >
          <div>
            a
          </div>
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;
